<resources>
    <string name="app_name">Herói Cuidador</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <color name="bg">#C0C0C0</color>
    <string name="title_activity_navegacao">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="text_operacao">Operação</string>
    <string name="text_home">Resultados</string>
    <string name="text_calibracao">Calibração</string>
    <string name="text_resetar">Resetar</string>
    <string name="text_iniciar_movimento">Iniciar Movimento</string>
    <string name="text_finalizar_movimento">Finalizar Movimento</string>
    <string name="text_finalizar_calibracao">Finalizar Calibração</string>
    <string name="text_calibrar">Calibrar</string>
    <string name="text_calibracao_apresentacao">A calibração server para conhecermos melhor o seu corpo e mehorarmos a precisão da análise dos movimentos realizados.</string>
    <string name="text_descricao_exercicio">Imagem de uma mulher se exercitando</string>
    <string name="text_escolha">Escolha um dispositivo</string>
    <string name="text_descricao_escolha">"Você deve estar emparelhado com seu dispositivo para vê-lo na lista. Puxe para atualizar a lista. "</string>
    <string name="text_dispositivo_nao_encontrado">Dispositivo não Encontrado!</string>
    <string name="text_horario">Horário</string>
    <string name="text_atividade">Atividade</string>
    <string name="text_hora_inicial">00:00</string>
    <string name="text_logo_descricao">Logo: Herói Cuidador</string>
    <string name="text_login">Login</string>
    <string name="text_cadastro">Cadastre-se</string>
    <string name="text_input_nome">Nome</string>
    <string name="text_input_password">Senha</string>
    <string name="text_back_cadastro">Crie uma conta</string>
    <string name="text_input_email">E-mail</string>
    <string name="text_input_weight">Peso</string>
    <string name="text_input_age">Idade</string>
    <string name="text_input_sex">Gênero</string>
    <string name="text_input_height">Altura</string>
    <string name="text_input_confirm_password">Confirmar senha</string>
    <string name="text_create_account">Criar conta</string>
    <string name="text_back_login">Ir para Login</string>
    <string name="text_cadastro_idoso">Insira os dados do paciente</string>
    <string name="text_cadastro_idoso_botao">Cadastre-se</string>
    <string name="text_resultado">Resultados</string>
    <string name="text_button_resultado">Receber resultados</string>
    <string-array name="text_atividades">
        <item>Caminhar</item>
        <item>Banho</item>
        <item>Jantar</item>
        <item>Café da Manhã</item>
        <item>Almoço</item>
        <item>Dormir</item>
    </string-array>

    <string-array name="text_atividades_info">
        <item>Caminhar:Essa é a atividade mais importante para o idoso, aqui ele vai deixar a cama ou a cadeira para realizar uma atividade física, mas também é a atividade que tem um risco muito elevado de queda quando o idoso tem limitações do movimento, por isso esteja sempre perto e atento. Caso o idoso use andador, apenas acompanhe sempre estando perto e de preferência com uma mão no braço dele por segurança para evitar quedas. Para ajudar um idoso sem andador passe seu braço de apoio por debaixo das axilas dele, e peça para ele segurar em você, em seguida com o seu outro braço segure o bíceps do idoso. Lembre-se de manter a coluna ereta, e na medida do possível deixar seus ombros alinhados, caso a caminhada seja por muito tempo, recomenda-se trocar de braço para não forçar apenas um lado do seu corpo.</item>
        <item>Banho:Essa atividade precisa ter muita atenção, pois o risco de queda é muito maior, tanto do cuidador quanto do idoso. Na medida do possível é recomendado a adaptação do local de banho, com barras de segurança, evitar box, tapetes anti-derrapantes e cadeira de banho. A transferência para a cadeira de banho, faça num local seco, para evitar sua queda. Também, lembre-se de deixar a coluna ereta e flexionar os joelhos, pois você levantará o idoso com a extensão dos joelhos obtendo assim mais força. Durante o banho não se abaixe sem flexionar os joelhos, e também use chinelos para aumentar a segurança. Para tirar o idoso da cadeira de banho, fique fora da área molhada na medida do possível, lembrando da flexão dos joelhos e da coluna ereta.</item>
        <item>Jantar</item>
        <item>Café da Manhã</item>
        <item>Almoço</item>
        <item>Dormir:Essa atividade é a que o cuidador exerce maior esforço, então o cuidador precisa ter cuidado no seu posicionamento. Quando o idoso tem a oportunidade de ter uma cama hospitalar, vai diminuir seu esforço, então sempre que possível use-a. Na impossibilidade, siga os próximos passos para evitar o maior esforço. Primeiro, para colocar o idoso na cama, deixe ele perto da beira da cama, se agache com a coluna ereta até você ficar confortável em segurá-lo pelas axilas. Em seguida levante-o, aplicando força no braço e estendendo seu joelho. Com isso, você evitará curvar sua coluna, diminuindo sua carga na lombar, ao colocar na cama, desça com idoso seu curvar sua coluna, deixando sempre ereta. Para retirá-lo, deixe o idoso sentado na cama e refaça o movimento para a cadeira, sempre flexionando o joelho e deixando a coluna ereta.</item>
    </string-array>
</resources>
