<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".activity.HomeActivity">

    <TextView
        android:id="@+id/text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dip"
        android:text="@string/text_escolha"
        android:textColor="@color/azul_escuro"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text"
        android:paddingLeft="10dip"
        android:paddingBottom="5dip"
        android:text="@string/text_descricao_escolha"
        android:textColor="@color/bg"
        android:textSize="15sp" />

    <me.aflak.pulltorefresh.PullToRefresh
        android:id="@+id/pull_to_refresh"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/info">

        <ListView
            android:id="@+id/list"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        </ListView>

    </me.aflak.pulltorefresh.PullToRefresh>

    <Button
        android:id="@+id/not_in_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pull_to_refresh"
        android:layout_alignParentStart="true"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/vermelho"
        android:text="@string/text_dispositivo_nao_encontrado"
        android:textColor="@android:color/white" />

</RelativeLayout>